--- a/less/style.less
+++ b/less/style.less
@@ -11,6 +11,7 @@
 @import 'components/breadcrumbs.less';
 @import 'components/mobile-button.less';
 @import 'components/paginator.less';
+@import 'components/intro-block.less';
 
 /* --- Fonts --- */
 @font-r: 'oswald_regularregular', sans-serif;
