--- a/css/style.css
+++ b/css/style.css
@@ -130,11 +130,11 @@ body {
 }
 .container {
   width: 100%;
-  max-width: 1380px;
+  max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 .container--carousel {
   padding-left: 5px;
@@ -1182,5 +1182,33 @@ h3 {
     font-size: 14px;
   }
 }
+.intro-block {
+  display: flex;
+  justify-content: space-between;
+}
+.intro-block__column {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  padding-top: 190px;
+  padding-bottom: 173px;
+}
+.intro-block__column:nth-child(1) {
+  padding-left: 100px;
+}
+.intro-block__column:nth-child(2) {
+  background: #0B7572;
+}
+/* #m1300 */
+/* #m1200 */
+/* #m1100 */
+/* #m900 */
+/* #m800 */
+/* #m700 */
+/* #m600 */
+/* #m500 */
+/* #m400 */
+/* #m400 */
+/* #m300 */
 /* --- Fonts --- */
 /* --- Colors --- */
