--- a/less/components/intro-block.less
+++ b/less/components/intro-block.less
@@ -1,29 +1,33 @@
 .intro-block {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
+  padding-top: 107px;
+  padding-bottom: 173px;
+  background: linear-gradient(
+    90deg,
+    rgb(255, 255, 255) 65%,
+    rgb(11, 117, 114) 39%
+  );
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   &__column {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     width: 45%;
-    padding-top: 190px;
-    padding-bottom: 173px;
   }
 
   &__column:nth-child(1) {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-
-    padding-left: 100px;
   }
 
-  &__column:nth-child(2) {
-    background: #0b7572;
-  }
   &__title {
-      width: 100%;
+    width: 100%;
     margin-bottom: 40px;
     font-size: 52px;
     font-weight: bold;
@@ -39,19 +43,17 @@
     font-weight: bold;
     color: black;
     position: relative;
-    border-bottom: 3px solid #FFCE50;
+    border-bottom: 3px solid #ffce50;
     transition: all 0.3s;
   }
-  &__link:hover{
-      color: #FFCE50;
-      border: none;
+  &__link:hover {
+    color: #ffce50;
+    border-bottom: 3px solid transparent;
   }
-  &__image{
-      position: absolute;
-      top: 109px;
-      right: 10%;
+  &__image {
+    width: 635px;
+    border-radius: 30px;
   }
-
 }
 
 /* #m1300 */
