--- a/less/components/intro-block.less
+++ b/less/components/intro-block.less
@@ -1,59 +1,63 @@
+// font-family: 'Exo 2', sans-serif;
+// font-family: 'PT Sans', sans-serif;
+
 .intro-block {
-  padding-top: 107px;
-  padding-bottom: 173px;
-  background: linear-gradient(
-    90deg,
-    rgb(255, 255, 255) 65%,
-    rgb(11, 117, 114) 39%
-  );
+    padding-top: 107px;
+    padding-bottom: 173px;
+    background: linear-gradient(
+        90deg,
+        rgb(255, 255, 255) 65%,
+        rgb(11, 117, 114) 39%
+    );
 
-  &__wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-  &__column {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 45%;
-  }
+    &__column {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 45%;
+    }
 
-  &__column:nth-child(1) {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
+    &__column:nth-child(1) {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
-  &__title {
-    width: 100%;
-    margin-bottom: 40px;
-    font-size: 52px;
-    font-weight: bold;
-    color: #363738;
-  }
-  &__text {
-    margin-bottom: 40px;
-    font-size: 16px;
-    color: #6b6b6c;
-  }
-  &__link {
-    font-size: 16px;
-    font-weight: bold;
-    color: black;
-    position: relative;
-    border-bottom: 3px solid #ffce50;
-    transition: all 0.3s;
-  }
-  &__link:hover {
-    color: #ffce50;
-    border-bottom: 3px solid transparent;
-  }
-  &__image {
-    width: 635px;
-    border-radius: 30px;
-  }
+    &__title {
+        width: 100%;
+        margin-bottom: 40px;
+        font-size: 52px;
+        font-weight: bold;
+        color: #363738;
+    }
+    &__text {
+        margin-bottom: 40px;
+        font-size: 16px;
+        font-family: @font-m;
+        color: #6b6b6c;
+    }
+    &__link {
+        font-size: 16px;
+        font-weight: bold;
+        color: black;
+        position: relative;
+        border-bottom: 3px solid #ffce50;
+        transition: all 0.3s;
+    }
+    &__link:hover {
+        color: #ffce50;
+        border-bottom: 3px solid transparent;
+    }
+    &__image {
+        width: 635px;
+        border-radius: 30px;
+    }
 }
 
 /* #m1300 */
