--- a/less/style.less
+++ b/less/style.less
@@ -1,22 +1,23 @@
 /* --- Imports --- */
-//@import (less) 'fonts/stylesheet.css';
+// @import (less) "fonts/stylesheet.css";
 
 /* --- Basic ---*/
-@import 'components/reset.less';
-@import 'components/basic.less';
+@import "components/reset.less";
+@import "components/basic.less";
 
 /* --- Main ---*/
-@import 'components/header.less';
-@import 'components/footer.less';
-@import 'components/breadcrumbs.less';
-@import 'components/mobile-button.less';
-@import 'components/paginator.less';
-@import 'components/intro-block.less';
+@import "components/header.less";
+@import "components/footer.less";
+@import "components/breadcrumbs.less";
+@import "components/mobile-button.less";
+@import "components/paginator.less";
+@import "components/intro-block.less";
+@import "components/services-block.less";
 
 /* --- Fonts --- */
-@font-r: 'oswald_regularregular', sans-serif;
-@font-m: 'oswaldmedium', sans-serif;
-@font-l: 'oswaldlight', sans-serif;
+@font-r: "Exo 2", sans-serif;
+@font-m: "PT Sans", sans-serif;
+@font-l: "oswaldlight", sans-serif;
 
 /* --- Colors --- */
 @c-text: black;
