--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ body {
   min-width: 970px;
   font-family: "Exo 2", sans-serif;
   font-size: 14px;
-  color: black;
+  color: #363738;
   line-height: 1.35;
 }
 .s-main {
@@ -173,7 +173,7 @@ h3 {
   border: 0;
   margin-top: 16px;
   margin-bottom: 16px;
-  background: black;
+  background: #363738;
 }
 /* ---------------- Titles ---------------- */
 .title {
@@ -185,7 +185,7 @@ h3 {
   position: relative;
   font-family: "PT Sans", sans-serif;
   font-size: 24px;
-  color: black;
+  color: #363738;
   line-height: 1.3;
   text-transform: uppercase;
 }
@@ -268,13 +268,13 @@ h3 {
   display: block;
   font-family: "Exo 2", sans-serif;
   font-size: 15px;
-  color: black;
+  color: #363738;
   letter-spacing: 0.5px;
 }
 .required:after {
   position: relative;
   left: 2px;
-  color: black;
+  color: #363738;
   content: '* ';
   font-weight: bold;
 }
@@ -568,7 +568,7 @@ h3 {
   align-items: center;
   width: 22px;
   height: 22px;
-  background-color: black;
+  background-color: #363738;
   border-radius: 50px;
   position: relative;
   overflow: hidden;
@@ -830,7 +830,7 @@ h3 {
   content: '\25c6';
   margin-left: 8px;
   font-size: 12px;
-  color: black;
+  color: #363738;
 }
 .breadcrumbs__item:first-child {
   margin-left: 0;
@@ -840,7 +840,7 @@ h3 {
 }
 .breadcrumbs__link {
   display: inline-block;
-  color: black;
+  color: #363738;
 }
 .breadcrumbs-2 {
   display: flex;
@@ -1016,7 +1016,7 @@ h3 {
   height: 100%;
   padding-left: 16px;
   padding-right: 25px;
-  border: 1px solid black;
+  border: 1px solid #363738;
   border-radius: 15px;
   font-family: "Exo 2", sans-serif;
   font-size: 15px;
@@ -1037,7 +1037,7 @@ h3 {
   width: 30px;
   height: 30px;
   margin-right: 5px;
-  border: 1px solid black;
+  border: 1px solid #363738;
 }
 .paginator__item:last-child {
   margin-right: 0;
@@ -1055,7 +1055,7 @@ h3 {
   fill: white;
 }
 .paginator__item--dotes:hover {
-  border-color: black;
+  border-color: #363738;
   background-color: inherit;
 }
 .paginator__dots,
