создал блок с голосованием, застрал на радио кнопках

--- a/less/style.less
+++ b/less/style.less
@@ -13,6 +13,7 @@
 @import "components/paginator.less";
 @import "components/intro-block.less";
 @import "components/services-block.less";
+@import "components/votes-block.less";
 
 /* --- Fonts --- */
 @font-r: "Exo 2", sans-serif;
