--- a/less/components/services-block.less
+++ b/less/components/services-block.less
@@ -1,6 +1,6 @@
 .services-block {
     margin-top: -111px;
-    margin-bottom: 100px;
+    padding-bottom: 100px;
 
     &__row {
         display: flex;
