--- a/less/components/votes-block.less
+++ b/less/components/votes-block.less
@@ -1,4 +1,5 @@
 .votes-block {
+    padding-bottom: 100px;
     &__title {
         justify-content: start;
         font-size: 48px;
@@ -27,11 +28,54 @@
     &__card {
         display: flex;
         margin-bottom: 16px;
-        padding: 40px 125px 48px 96px;
+        padding: 40px 125px 48px 40px;
         box-shadow: 0px 3px 15px 0px #0000001f;
+        border: 1px solid transparent;
         border-radius: 10px;
+        transition: all 0.6s;
+
+        &-radio-wrapper {
+            margin-top: 8px;
+            margin-right: 32px;
+        }
 
         &-custom-radio {
+            position: relative;
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            border: 1px solid #cbcbcd;
+            border-radius: 50%;
+            box-shadow: 0px 4px 4px 0px #00000033 inset;
+        }
+
+        &-custom-radio::before {
+            content: '';
+            position: absolute;
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            background-color: transparent;
+            border-radius: 50%;
+            left: 50%;
+            top: 50%;
+            transform: translate(-5px, -5px);
+            opacity: 0;
+        }
+
+        &-radio {
+            opacity: 0;
+        }
+
+        &-radio:checked + &-custom-radio::before {
+            opacity: 1;
+            background-color: #0b7572;
+            transition: all 0.6s;
+        }
+
+        &-radio:focus + &-custom-radio {
+            border: 1px solid #9c9b9b;
+            transition: all 0.6s;
         }
 
         &-title {
@@ -46,6 +90,29 @@
             font-family: @font-m;
             color: #6b6b6c;
         }
+    }
+
+    &__card:hover {
+        border: 1px solid #0b7572;
+    }
+
+    &__column:nth-child(2) {
+        margin-right: 120px;
+    }
+
+    &__counter-title {
+        font-size: 20px;
+        line-height: 1.3;
+    }
+
+    &__counter-text {
+        font-size: 20px;
+        border-bottom: 3px solid #ffce50;
+    }
+
+    &__counter-number {
+        font-size: 54px;
+        line-height: 1.81;
     }
 }
 
