сделал третий блок, оставил комментарий для второго блока о доработки

--- a/less/components/votes-block.less
+++ b/less/components/votes-block.less
@@ -33,6 +33,7 @@
         border: 1px solid transparent;
         border-radius: 10px;
         transition: all 0.6s;
+        cursor: pointer;
 
         &-radio-wrapper {
             margin-top: 8px;
