--- a/less/style.less
+++ b/less/style.less
@@ -14,6 +14,7 @@
 @import "components/intro-block.less";
 @import "components/services-block.less";
 @import "components/votes-block.less";
+@import "components/advantages-block.less";
 
 /* --- Fonts --- */
 @font-r: "Exo 2", sans-serif;
