--- a/less/components/advantages-block.less
+++ b/less/components/advantages-block.less
@@ -53,7 +53,7 @@
             line-height: 1.5;
             color: #6b6b6c;
             font-weight: 400;
-            font-family: @font-mg;
+            font-family: @font-m;
         }
     }
 }
